[package]
name = "perlin-palette"
version = "0.1.0"
edition = "2018"

[lib]
crate-type = ["cdylib"]

[dependencies]
ledbetter = { path = "../.." }
noise = "0.7.0"
num-traits = "0.2.14"
palette = "0.6.0"
getrandom = { version = "0.2.3", features = ["custom"] }
rand = "0.8.4"
wee_alloc = "0.4.5"

[profile.release]
lto = true
